--- a/src/test/resources/dataFile/QA.properties
+++ b/src/test/resources/dataFile/QA.properties
@@ -1,20 +1,21 @@
-#Fri Jul 23 12:30:57 IST 2021
-NewCustPass=Cust@123
-ArtistPass=Artist@123
-NewCustEmail=biskane.katchintech@gmail.com
-StoreEmail=a2zdigilearn@gmail.com
+#Mon Nov 06 15:33:34 IST 2023
+NewStorePswd=Store@123
+NewArtistPswd=Artist@123
+scenarioName=Verify user able to click on login button
+AdminPass=biskane@123
+AdminEmail=biskane8@gmail.com
 CommonEmail=kapi@yopmail.com
 5849=5849
-ArtistEmail=happyonlineeducation@gmail.com
-CommonPass=Chotu@1992
-CustomerEmail=a2zdigilearn@gmail.com
-NewCustomerPswd=Cust@123
-NewStorePswd=Store@123
 NewStorePass=Store@123
-NewArtistPswd=Artist@123
-StorePass=Store@123
+ArtistEmail=happyonlineeducation@gmail.com
+ArtistPass=Artist@123
 NewStoreEmail=biskane.katchintech@gmail.com
-AdminEmail=biskane8@gmail.com
-AdminPass=biskane@123
-adminStage=wellnesswits@yopmail.com
+StoreEmail=a2zdigilearn@gmail.com
+NewCustEmail=biskane.katchintech@gmail.com
+CustomerEmail=a2zdigilearn@gmail.com
+NewCustPass=Cust@123
+NewCustomerPswd=Cust@123
+StorePass=Store@123
 adminPassword=Admin@123
+CommonPass=Chotu@1992
+adminStage=wellnesswits@yopmail.com
